--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,15 @@ spring:
     suffix: .html
     servlet:
       content-type: text/html
-
+  # 日期格式化
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+  aop:
+    auto: true
+  mvc:
+    format:
+      date: yyyy-MM-dd HH:mm:ss
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   typeAliasesPackage: com.lancabbage.lancodeapi.entity
