--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,12 @@ spring:
     url: jdbc:mysql://localhost:3306/lan-code-api?useSSL=true&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
     username: root
     password: AAaa123456
-
+  servlet:
+    multipart:
+      enabled: true #是否启用http上传处理
+      max-request-size: 100MB #最大请求文件的大小
+      max-file-size: 20MB #设置单个文件最大长度
+      file-size-threshold: 20MB #当文件达到多少时进行磁盘写入
   thymeleaf:
     mode: HTML5
     encoding: utf-8
@@ -31,3 +36,4 @@ mybatis:
 
 logging:
   level.com.lancabbage.lancodeapi: debug
+
