--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
-
+server:
+  port: 5160
+  servlet:
+    context-path: /lApi
 spring:
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/lan-code-api?useSSL=true&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
@@ -28,6 +30,7 @@ spring:
   mvc:
     format:
       date: yyyy-MM-dd HH:mm:ss
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   typeAliasesPackage: com.lancabbage.lancodeapi.entity
@@ -36,4 +39,3 @@ mybatis:
 
 logging:
   level.com.lancabbage.lancodeapi: debug
-
