nginx转发静态资源丢失

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -30,6 +30,7 @@ spring:
   mvc:
     format:
       date: yyyy-MM-dd HH:mm:ss
+    static-path-pattern: /**
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
