--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,5 @@
-server:
-  port: 5160
-  servlet:
-    context-path: /lApi
+
 spring:
-  datasource:
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://172.16.50.183:3306/lan-code-api?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
   servlet:
     multipart:
       enabled: true #是否启用http上传处理
@@ -33,7 +25,7 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  typeAliasesPackage: com.lancabbage.lancodeapi.entity
+  typeAliasesPackage: com.lancabbage.gorgeous.entity
   configuration:
     map-underscore-to-camel-case: true
 
