--- a/conf/application.properties
+++ b/conf/application.properties
@@ -1,13 +1,15 @@
 #端口
-server.port=5160
+server.port=
 #上下文
-server.servlet.context-path=/gorgeous
+server.servlet.context-path=
 #数据库信息
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/lan-code-api?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=AAaa123456
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=
+#spring.datasource.url=jdbc:mysql://localhost:3306/gorgeous?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 #git信息
+#拉去代码的账号密码
 gitInfo.username=
 gitInfo.password=
-gitInfo.repository-path=
