--- a/conf/application.properties
+++ b/conf/application.properties
@@ -1,7 +1,7 @@
 #端口
-server.port=
+server.port=5160
 #上下文
-server.servlet.context-path=
+server.servlet.context-path=gorgeous
 #数据库信息
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driver-class-name=
