--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ FROM java:8
 MAINTAINER tonyZheng
 VOLUME /tmp
 ARG version=1.0.0
-ADD lan-code-api-0.0.1-SNAPSHOT.jar app.jar
+ADD gorgeous-doc.jar app.jar
 RUN echo "Asia/shanghai" > /etc/timezone
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 EXPOSE 5160
