--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,5 @@
 #默认配置 config/application.properties发布时用
 spring:
-  profiles:
-    active: dev
   servlet:
     multipart:
       enabled: true #是否启用http上传处理
@@ -32,5 +30,5 @@ mybatis:
     map-underscore-to-camel-case: true
 
 logging:
-  level.com.lancabbage.lancodeapi: debug
+  level.com.lancabbage.gorgeous: debug
 
