--- a/conf/application.properties
+++ b/conf/application.properties
@@ -1,11 +1,11 @@
 #端口
 server.port=5160
 #上下文
-server.servlet.context-path=gorgeous
+server.servlet.context-path=/gorgeous
 #数据库信息
 #修改驱动注意空格
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/gorgeous?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/gorgeous-doc?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
