--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,13 +5,13 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/lan-code-api?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    url: jdbc:mysql://47.100.15.244:3306/gorgeous-dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
     username: root
-    password: AAaa123456
+    password: 123456
 
 git-info:
-  username:
-  password:
-#  username: gorgeous-test
-#  password: AAaa123456
+#  username:
+#  password:
+  username: gorgeous-test
+  password: AAaa123456
   repository-path: /Users/lanyanhua/Desktop/gittest
